<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluee"
    android:orientation="vertical"
    tools:context=".About">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#f5f6fc"
        android:layout_height="70sp">
        <LinearLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/bck"
                android:src="@drawable/back"
                android:layout_marginLeft="10sp"
                android:layout_width="20sp"
                android:layout_height="20sp"/>
            <TextView
                android:layout_marginLeft="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="BACK"
                android:textColor="#000"
                android:fontFamily="@font/nunito_sans_semibold"
                android:textSize="17sp" />
        </LinearLayout>


    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text="Introduction "
                android:textColor="#000"
                android:gravity="center"
                android:textSize="32sp" />
            <TextView
                android:layout_margin="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/about"
                android:textSize="18sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text=" Journey "
                android:textColor="#000"
                android:gravity="center"
                android:textSize="32sp" />
            <TextView
                android:layout_margin="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/about1"
                android:textSize="18sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text=" Goal "
                android:textColor="#000"
                android:gravity="center"
                android:textSize="32sp" />
            <TextView
                android:layout_margin="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/about2"
                android:textSize="18sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text=" Team "
                android:textColor="#000"
                android:gravity="center"
                android:textSize="32sp" />
            <TextView
                android:layout_margin="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/about3"
                android:textSize="18sp" />
            <ImageView
                android:layout_marginTop="20sp"
                android:layout_width="120sp"
                android:layout_height="120sp"
                android:src="@drawable/director"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="240sp"
                android:layout_height="wrap_content"
                android:text="Sumit Mishra"
                android:gravity="center"
                android:layout_gravity="center"
                android:fontFamily="@font/lato_bold"
                android:textSize="25sp"
                android:layout_marginBottom="40sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text=" Summit classes App Developed by ICD "
                android:textColor="#000"
                android:gravity="center"
                android:textSize="22sp" />
            <TextView
                android:layout_margin="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:gravity="center"
                android:text="@string/about4"
                android:textSize="18sp" />
            <TextView
                android:layout_margin="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:gravity="center"
                android:text="Contact to ICD for App development :"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/call"
                android:background="@drawable/blackout"
                android:layout_width="150sp"
                android:layout_height="55sp"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="Call US"
                android:textSize="18sp"
                android:layout_marginBottom="40sp"

                />
        </LinearLayout>
    </ScrollView>


</LinearLayout>